<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:text="@string/title_help" />

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:text="@string/help_entry_1" />

        <TextView
            style="@style/ItemText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/help_entry_2" />

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:text="@string/help_entry_3" />

        <TextView
            style="@style/ItemText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/help_entry_4" />

        <TextView
            style="@style/ItemText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:includeFontPadding="true"
            android:padding="24dp"
            android:text="@string/help_entry_5"
            android:textStyle="bold" />

        <TextView
            style="@style/ItemText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:text="@string/help_entry_6" />

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:text="@string/help_entry_7" />

        <TextView
            style="@style/ItemText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/help_entry_8" />
    </LinearLayout>
</layout>